# file-mcp-python

./: .gitignore  README.md  pyproject.toml  server.py
.github/workflows/: ci.yaml
